Revert "Added First Area"
This reverts commit c25e49985f807f3be5315384ebdf816210f1cbca.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level1.Level1
+GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 
-EditorStartupMap=/Game/Level1.Level1
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
