--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Level1.Level1
 
 
 EditorStartupMap=/Game/Level1.Level1
+GlobalDefaultGameMode=/Game/GameMode/CustomGameMode.CustomGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
